Sept Update - Floating World and Bug Fixes/3.13 prep work

--- a/planetary_diversity/localisation/german/planetarydiversity_start_screen_message_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_start_screen_message_l_german.yml
@@ -1,11 +1,13 @@
 ﻿l_german:
 
- START_SCREEN_PART_ONE_WET_SUPERHABITABLE: "In the eons, since the first primitive [GetSpeciesName] communities took shape among the rich jungles and shallow seas of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_DRY_SUPERHABITABLE: "In the eons, since the first primitive [GetSpeciesName] communities took shape in the lush river valleys [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_COLD_SUPERHABITABLE: "In the eons, since the first primitive [GetSpeciesName] communities took shape in the rich boreal forests [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_WET_TIDALLY_LOCKED: "In the eons since the first primitive [GetSpeciesName] communities took shape among the shaded forests under the constant sun of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_DRY_TIDALLY_LOCKED: "In the eons since the first primitive [GetSpeciesName] communities took shape in the twilight zone of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_COLD_TIDALLY_LOCKED: "In the eons since the first primitive [GetSpeciesName] communities took shape on the frozen twilight coast of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_WET_CAVE: "In the eons since the first primitive [GetSpeciesName] communities took shape in the great lush caverns of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_DRY_CAVE: "In the eons since the first primitive [GetSpeciesName] communities took shape in the sandstone caves of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_COLD_CAVE: "In the eons since the first primitive [GetSpeciesName] communities took shape in the ice filled caverns of [GetHomeWorldName], our civilization has spread and prospered."
+START_SCREEN_PART_ONE_WET_SUPERHABITABLE: "Seitdem sich in den Äonen die ersten primitiven [GetSpeciesName]-Gemeinschaften in den üppigen Dschungeln und seichten Meeren von [GetHomeWorldName] gebildet haben, hat sich unsere Zivilisation ausgebreitet und gediehen."
+
+START_SCREEN_PART_ONE_DRY_SUPERHABITABLE: "Seitdem sich in den Äonen die ersten primitiven [GetSpeciesName]-Gemeinschaften in den üppigen Flusstälern [GetHomeWorldName] gebildet haben, hat sich unsere Zivilisation ausgebreitet und gediehen."
+
+START_SCREEN_PART_ONE_COLD_SUPERHABITABLE: "Seitdem sich in den Äonen die ersten primitiven [GetSpeciesName]-Gemeinschaften in den üppigen borealen Wäldern [GetHomeWorldName] gebildet haben, hat sich unsere Zivilisation ausgebreitet und gediehen."
+START_SCREEN_PART_ONE_WET_TIDALLY_LOCKED: "In den Äonen, seit die ersten primitiven [GetSpeciesName]-Gemeinschaften in den schattigen Wäldern unter der ständigen Sonne von [GetHomeWorldName] Gestalt annahmen, hat sich unsere Zivilisation ausgebreitet und gediehen."
+START_SCREEN_PART_ONE_DRY_TIDALLY_LOCKED: "In den Äonen, seit die ersten primitiven [GetSpeciesName]-Gemeinschaften in der Dämmerungszone von [GetHomeWorldName] Gestalt annahmen, hat sich unsere Zivilisation ausgebreitet und gediehen."
+START_SCREEN_PART_ONE_COLD_TIDALLY_LOCKED: "In den Äonen, seit die ersten primitiven [GetSpeciesName]-Gemeinschaften an der gefrorenen Dämmerungsküste von [GetHomeWorldName] Gestalt annahmen, hat sich unsere Zivilisation ausgebreitet und gediehen."
+START_SCREEN_PART_ONE_WET_CAVE: "In den Äonen, seit die ersten primitiven [GetSpeciesName]-Gemeinschaften in den großen, üppigen Höhlen von [GetHomeWorldName] Gestalt annahmen, hat sich unsere Zivilisation ausgebreitet und gediehen."
+START_SCREEN_PART_ONE_DRY_CAVE: "In den Äonen, seit die ersten primitiven [GetSpeciesName]-Gemeinschaften in den Sandsteinhöhlen von [GetHomeWorldName] Gestalt annahmen, hat sich unsere Zivilisation ausgebreitet und gediehen."
+START_SCREEN_PART_ONE_COLD_CAVE: "In den Äonen, seit die ersten primitiven [GetSpeciesName]-Gemeinschaften in den eisgefüllten Höhlen von [GetHomeWorldName] Gestalt annahmen, hat sich unsere Zivilisation ausgebreitet und gediehen."
