--- a/planetary_diversity_ascension_worlds/localisation/german/planetarydiversity_aw_flooded_l_german.yml
+++ b/planetary_diversity_ascension_worlds/localisation/german/planetarydiversity_aw_flooded_l_german.yml
@@ -1,33 +1,33 @@
-﻿l_english:
+﻿l_german:
 
-#Flooded/Aquatic Planets
- decision_pd_aw_flood_planet: "Expand Planetary Sea"
- decision_pd_aw_flood_planet_desc: "This oceanic planet has the potential to be an ideal home for our people. By adjusting sea levels and moving cities underwater, we can ensure that life flourishes for those adapted to live beneath the waves."
- decision_pd_aw_flood_planet_tooltip: "Ice will be harvested from a systems with an §Y$sm_ice_mining_station$§!\n§Y$pd_aw_flooded_planet$§! modifer added:\n$pd_aw_flooded_planet_tooltip$"
- flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_POP_GROWTH_SPEED$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-Aquatic§! Habitability: §R-20%§!"
- decision_pd_aw_unflood_planet: "Unflood Planet"
- decision_pd_aw_unflood_planet_desc: "This oceanic planet has the potential to be an ideal home for our people. By lowering sea levels and moving cities to islands, we can ensure that life flourishes for those adapted to live above the waves."
- decision_pd_aw_flood_ringworld: "Flood Ringworld"
- decision_pd_aw_flood_ringworld_desc: "This ringworld has the potential to be an ideal home for our people. By adjusting sea levels and moving cities underwater, we can ensure that life flourishes for those adapted to live beneath the waves."
- decision_pd_aw_unflood_ringworld: "Unflood Ringworld"
- decision_pd_aw_unflood_ringworld_desc: "This ringworld has the potential to be an ideal home for our people. By lowering sea levels and moving cities back to land, we can ensure that life flourishes for those adapted to live above the waves."
- decision_pd_aw_unflood_habitat: "Unflood Habitat"
- decision_pd_aw_unflood_habitat_desc: "This habitat has the potential to be an ideal home for our people. By draining this habitat, we can ensure that life flourishes for those adapted to live above the waves."
- decision_pd_aw_flood_habitat_tooltip: "Habitability: §R-20%§!\nConsidered an §YOcean§! world for §YAquatic§! species.\nIce will be harvested from a system with an §Y$sm_ice_mining_station$§! on the starbase."
+#Überflutete/Aquatische Planeten
+decision_pd_aw_flood_planet: "Planetenmeer erweitern"
+decision_pd_aw_flood_planet_desc: "Dieser ozeanische Planet hat das Potenzial, eine ideale Heimat für unsere Bevölkerung zu sein. Indem wir den Meeresspiegel anpassen und Städte unter Wasser verlegen, können wir sicherstellen, dass das Leben für diejenigen, die an das Leben unter Wasser angepasst sind, gedeiht."
+decision_pd_aw_flood_planet_tooltip: "Eis wird aus Systemen mit einer §Y$sm_ice_mining_station$§ geerntet!\n§Y$pd_aw_flooded_planet$§! Modifikator hinzugefügt:\n$pd_aw_flooded_planet_tooltip$"
+flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_POP_GROWTH_SPEED$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-aquatisch§! Bewohnbarkeit: §R-20%§!"
+decision_pd_aw_unflood_planet: "Planeten entfluten"
+decision_pd_aw_unflood_planet_desc: "Dieser ozeanische Planet hat das Potenzial, eine ideale Heimat für unsere Bevölkerung zu sein. Indem wir den Meeresspiegel senken und Städte auf Inseln verlegen, können wir sicherstellen, dass das Leben für diejenigen gedeiht, die an ein Leben über den Meeren angepasst sind."
+decision_pd_aw_flood_ringworld: "Ringwelt überfluten"
+decision_pd_aw_flood_ringworld_desc: "Diese Ringwelt hat das Potenzial, eine ideale Heimat für unsere Leute zu sein. Indem wir den Meeresspiegel anpassen und Städte unter Wasser verlegen, können wir sicherstellen, dass das Leben für diejenigen, die an das Leben unter Wasser angepasst sind, gedeiht."
+decision_pd_aw_unflood_ringworld: "Ringwelt entfluten"
+decision_pd_aw_unflood_ringworld_desc: "Diese Ringwelt hat das Potenzial, eine ideale Heimat für unser Volk zu werden. Indem wir den Meeresspiegel senken und Städte zurück an Land verlegen, können wir sicherstellen, dass das Leben für diejenigen, die an ein Leben über dem Meeresspiegel angepasst sind, floriert."
+decision_pd_aw_unflood_habitat: "Lebensraum entfluten"
+decision_pd_aw_unflood_habitat_desc: "Dieser Lebensraum hat das Potenzial, eine ideale Heimat für unsere Bevölkerung zu werden. Indem wir diesen Lebensraum trockenlegen, können wir sicherstellen, dass das Leben für diejenigen, die an ein Leben über dem Meeresspiegel angepasst sind, gedeiht."
+decision_pd_aw_flood_habitat_tooltip: "Bewohnbarkeit: §R-20%§!\nWird als §YOzean§!-Welt für §YAquatische§!-Spezies betrachtet.\nEis wird aus einem System mit einer §Y$sm_ice_mining_station$§! auf der Sternenbasis geerntet."
 
- flooded_habitat: "Flooded"
- flooded_habitat_desc: "Engulfed by water, this world faithfully mirrors the idyllic environment of aquatic denizens."
- pd_aw_flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_POP_GROWTH_SPEED$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-Aquatic§! Habitability: §R-20%§!"
+flooded_habitat: "Überflutet"
+flooded_habitat_desc: "Von Wasser umgeben, spiegelt diese Welt getreu die idyllische Umgebung der Wasserbewohner wider."
+pd_aw_flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_POP_GROWTH_SPEED$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-aquatisch§! Bewohnbarkeit: §R-20%§!"
 
- pd_aw_flooded_planet: "Flooded World"
- pd_aw_flooded_planet_desc: "This oceanic planet is an ideal home for aquatic species. Life flourishes for those adapted to live beneath the waves."
- pd_aw_flooded_habitat: "Flooded Habitat"
- pd_aw_flooded_habitat_desc: "This habitat has been flooded with water, imitating the natural environment of Aquatic creatures."
+pd_aw_flooded_planet: "Überflutete Welt"
+pd_aw_flooded_planet_desc: "Dieser ozeanische Planet ist eine ideale Heimat für Wasserlebewesen. Das Leben blüht für diejenigen, die an das Leben unter Wasser angepasst sind."
+pd_aw_flooded_habitat: "Überfluteter Lebensraum"
+pd_aw_flooded_habitat_desc: "Dieser Lebensraum wurde mit Wasser geflutet, um den natürlichen Lebensraum von Wasserlebewesen zu imitieren."
 
- ICE_MINING_PLANET_SUCCESS_TITLE: "Planet Flooded"
- ICE_MINING_PLANET_SUCCESS_DESC: "Using ice mined from the $SYSTEM|Y$ system, we have managed to flood §Y[This.GetName]§!."
+ICE_MINING_PLANET_SUCCESS_TITLE: "Planet überflutet"
+ICE_MINING_PLANET_SUCCESS_DESC: "Mithilfe des aus dem $SYSTEM|Y$-System abgebauten Eises ist es uns gelungen, §Y[This.GetName]§! zu fluten."
 
- ocean_paradise_2: "$ocean_paradise$"
- ocean_paradise_2_desc: "$ocean_paradise_desc$"
- ocean_paradise_hive_2: "$ocean_paradise_hive$"
- ocean_paradise_hive_2_desc: "$ocean_paradise_hive_desc$"
+ocean_paradise_2: "$ocean_paradise$"
+ocean_paradise_2_desc: "$ocean_paradise_desc$"
+ocean_paradise_hive_2: "$ocean_paradise_hive$"
+ocean_paradise_hive_2_desc: "$ocean_paradise_hive_desc$"
