--- a/planetary_diversity_ascension_worlds/localisation/german/planetarydiversity_aw_shroud_l_german.yml
+++ b/planetary_diversity_ascension_worlds/localisation/german/planetarydiversity_aw_shroud_l_german.yml
@@ -1,30 +1,30 @@
-﻿l_english:
+﻿l_german:
 
 ###Shroud Planets
 #AP
- ap_pd_shroud_worlds: "Unregulated Industrialism"
- ap_pd_shroud_worlds_desc: "The barriers between the mortal realm and the Shroud are thinner than expected. Concentrating our psionic energy, we can further weaken these barriers and create worlds that span both dimensions."
- allow_shroud_worlds: "§YUnlocks Decision:§! $decision_pd_aw_shroud_planet$ on non-ideal planets"
- describe_shroud_worlds: "§Y$decision_pd_aw_shroud_planet$§! modifier:\n$t$- "§GPsionic§! £pop£ Pops:\n- $mod_planet_psionic_jobs_produces_mult$: §G10%§!\n- $MOD_POP_HAPPINESS$: §G10%§!\n\n§YNon-Psionic§! £pop£ Pops:\n- £mod_pop_environment_tolerance£ §YPlanet Habitability§!: §R-50%§!\n- $MOD_POP_HAPPINESS$: §R-25%§!\n- $MOD_POP_GROWTH_SPEED$: §R-25%§"
+ap_pd_shroud_worlds: "Unregulierter Industrialismus"
+ap_pd_shroud_worlds_desc: "Die Barrieren zwischen dem Reich der Sterblichen und dem Shroud sind dünner als erwartet. Indem wir unsere psionische Energie konzentrieren, können wir diese Barrieren weiter schwächen und Welten erschaffen, die beide Dimensionen umfassen."
+allow_shroud_worlds: "§YSchaltet Entscheidung frei:§! $decision_pd_aw_shroud_planet$ auf nicht idealen Planeten"
+describe_shroud_worlds: "§Y$decision_pd_aw_shroud_planet$§! Modifikator:\n$t$- "§GPsionic§! £pop£ Pops:\n- $mod_planet_psionic_jobs_produces_mult$: §G10%§!\n- $MOD_POP_HAPPINESS$: §G10%§!\n\n§YNon-PSionic§! £pop£ Pops:\n- £mod_pop_environment_tolerance£ §YPlanetenbewohnbarkeit§!: §R-50%§!\n- $MOD_POP_HAPPINESS$: §R-25%§!\n- $MOD_POP_GROWTH_SPEED$: §R-25%§"
 
-#Decisions
- decision_pd_aw_shroud_planet: "Shroud Phasing"
- decision_pd_aw_shroud_planet_desc: "We can weaken the barrier between this planet and the Shroud and create a balance between the material and psionic realms."
- decision_pd_aw_shroud_planet_effects_short: "§Y$pd_aw_shroud_planet$§! modifier added.\n\nIncreases £pop£ §GPsionic Pop Output§! but reduces £pop£ §YNon-Psionic Pop Output§!."
- decision_pd_aw_shroud_planet_cleanup: "Phase-Lock Planet"
- decision_pd_aw_shroud_planet_cleanup_desc: "Our physicists can strengthen the barrier between this planet and the Shroud, locking it in the material realm."
- decision_pd_aw_shroud_planet_cleanup_tooltip: "\nWe will remove the psionic influence from this planet."
+#Entscheidungen
+decision_pd_aw_shroud_planet: "Shroud-Phasen"
+decision_pd_aw_shroud_planet_desc: "Wir können die Barriere zwischen diesem Planeten und dem Shroud schwächen und ein Gleichgewicht zwischen der materiellen und der psionischen Welt schaffen."
+decision_pd_aw_shroud_planet_effects_short: "§Y$pd_aw_shroud_planet$§! Modifikator hinzugefügt.\n\nErhöht £pop£ §GPsionic Pop Output§!, verringert jedoch £pop£ §YNon-Psionic Pop Output§!."
+decision_pd_aw_shroud_planet_cleanup: "Phase-Lock Planet"
+decision_pd_aw_shroud_planet_cleanup_desc: "Unsere Physiker können die Barriere zwischen diesem Planeten und dem Grabtuch verstärken und ihn in der materiellen Welt einschließen."
+decision_pd_aw_shroud_planet_cleanup_tooltip: "\nWir werden den psionischen Einfluss von diesem Planeten entfernen."
 
-#Modifiers
- pd_aw_shroud_planet: "Shroud Touched"
- pd_aw_shroud_planet_desc: "In this place, the deliberately weakened barrier between the material realm and the Shroud has enabled individuals with psychic abilities to reshape reality to a certain extent. However, for those without such gifts, the line between nightmare and reality blurs, giving rise to an endless tapestry of suffering and torment."
- pd_aw_shroud_planet_tooltip: "§GPsionic§! £pop£ Pops:\n- $mod_planet_psionic_jobs_produces_mult$: §G10%§!\n- $MOD_POP_HAPPINESS$: §G10%§!\n\n§YNon-Psionic§! £pop£ Pops:\n- £mod_pop_environment_tolerance£ §YPlanet Habitability§!: §R-50%§!\n- $MOD_POP_HAPPINESS$: §R-25%§!\n- $MOD_POP_GROWTH_SPEED$: §R-25%§!"
- pd_shroud_planet: "$pd_aw_shroud_planet$"
- pd_shroud_planet_desc: "$pd_aw_shroud_planet_desc$"
- pd_shroud_planet_tooltip: "$pd_aw_shroud_planet_tooltip$"
+#Modifikatoren
+pd_aw_shroud_planet: "Grabtuch berührt"
+pd_aw_shroud_planet_desc: "An diesem Ort hat die absichtlich geschwächte Barriere zwischen der materiellen Welt und dem Grabtuch es Personen mit übersinnlichen Fähigkeiten ermöglicht, die Realität bis zu einem gewissen Grad umzugestalten. Für diejenigen ohne solche Gaben verschwimmt jedoch die Grenze zwischen Albtraum und Realität, was zu einem endlosen Wandteppich aus Leid und Qual führt."
+pd_aw_shroud_planet_tooltip: "§GPsionic§! £pop£ Pops:\n- $mod_planet_psionic_jobs_produces_mult$: §G10%§!\n- $MOD_POP_HAPPINESS$: §G10%§!\n\n§YNon-Psionic§! £pop£ Pops:\n- £mod_pop_environment_tolerance£ §YPlanet Habitability§!: §R-50%§!\n- $MOD_POP_HAPPINESS$: §R-25%§!\n- $MOD_POP_GROWTH_SPEED$: §R-25%§!"
+pd_shroud_planet: "$pd_aw_shroud_planet$"
+pd_shroud_planet_desc: "$pd_aw_shroud_planet_desc$"
+pd_shroud_planet_tooltip: "$pd_aw_shroud_planet_tooltip$"
 
-#Notification Message
- MESSAGE_PD_AW_SHROUD_DESC:1 "$PLANET|Y$ is now §Y$pd_aw_shroud_planet$§!"
- MESSAGE_PD_AW_SHROUD_MESSAGE_TYPE_TITLE: "Planetary Shroud Communion Complete"
- MESSAGE_PD_AW_SHROUD_CLEANUP_DESC:1 "The influence of the Shourd has been removed on $PLANET|Y$."
- MESSAGE_PD_AW_SHROUD_CLEANUP_MESSAGE_TYPE_TITLE: "Planet Unshrouded"
+#Benachrichtigungsnachricht
+MESSAGE_PD_AW_SHROUD_DESC:1 "$PLANET|Y$ ist jetzt §Y$pd_aw_shroud_planet$§!"
+MESSAGE_PD_AW_SHROUD_MESSAGE_TYPE_TITLE: "Planeten-Schleier-Kommunion abgeschlossen"
+MESSAGE_PD_AW_SHROUD_CLEANUP_DESC:1 "Der Einfluss des Shourd wurde auf $PLANET|Y$ entfernt."
+MESSAGE_PD_AW_SHROUD_CLEANUP_MESSAGE_TYPE_TITLE: "Planet enthüllt"
