--- a/planetary_diversity_uniques/localisation/pd_uniques_l_english.yml
+++ b/planetary_diversity_uniques/localisation/pd_uniques_l_english.yml
@@ -19,6 +19,8 @@
  d_pd_floating_skyfall_islands_desc: "A region of ring-shaped islands with a strong hydrosphere, where waterfalls cascade from the edges and vanish into the mist below. The breathtaking scenery and natural beauty make it a prime destination for trade and tourism, attracting visitors and merchants from across the galaxy."
  d_pd_floating_mining_operation: "Eludium Stirp-mine Operation"
  d_pd_floating_mining_operation_desc: "The planet's ecosystem, which had previously blocked large-scale mining operations, has been cleared to fully exploit the rare Eludium ore."
+ d_pd_eludium_islands: "Eludium Islands"
+ d_pd_eludium_islands_desc: "While this planet's bedrock is saturated with Eludium, many smaller islands contain concentrated deposits that are easy to access, allowing mining operations to have minimal environmental impact."
  decision_d_pd_the_great_knot_mining: "$d_pd_floating_the_great_knot$ Mining Operation"
  decision_d_pd_the_great_knot_mining_desc: "The area known as $d_pd_floating_the_great_knot$ will be developed into a large-scale Eludium mining operation."
  decision_d_pd_whispering_glades_mining: "$d_pd_floating_whispering_glades$ Mining Operation"
@@ -26,12 +28,43 @@
  decision_d_pd_skyfall_islands_mining: "$d_pd_floating_skyfall_islands$ Mining Operation"
  decision_d_pd_skyfall_islands_mining_desc: "The area known as the $d_pd_floating_skyfall_islands$ will be developed into a large-scale Eludium mining operation."
  tech_eludium_research:1 "Eludium Refining"
- tech_eludium_research_desc:2 "Mining Eludium is straightforward, but it is much more complicated to understand its potential and refining process. Like all resources, unlocking its full potential will take time."
+ tech_eludium_research_desc: "Mining Eludium is straightforward, but it is much more complicated to understand its potential and refining process. Like all resources, unlocking its full potential will take time."
+ tech_eludium_research_tt_desc: "§HUnlocks:§! Eludium Mining\n§HUnlocks:§! Eludium Edicts"
+ edict_eludium_research:0 "Eludium Research Boost"
+ edict_eludium_research_desc:0 "Empowering our labs with refined Eludium will supercharge the research capabilities of our physics departments."
+ edict_eludium_energy:0 "Eludium Energy Grid"
+ edict_eludium_energy_desc:0 "Incorporating Eludium as a hyper-conductive material within our energy grid amplifies its power throughput."
+ edict_eludium_weapons:0 "Eludium Weapons Transistors"
+ edict_eludium_weapons_desc:0 "Integrating Eludium-based transistors into our energy weapons drastically enhances their discharge velocity and impact yield."
+ decision_pd_add_floating_island: "Create Artificial Floating Islands"
+ decision_pd_add_floating_island_desc: "By harnessing the power of Eludium, we can lift entire islands into the skies of this world, unlocking vast new spaces for construction."
+ d_pd_artifical_floating_islands: "Artificial Floating Islands"
+ d_pd_artifical_floating_islands_desc: "Harnessing the power of Eludium, we have lifted entire islands into the skies of this world, unlocking vast new spaces for construction."
+ tech_eludium_floating_islands: "Artificial Island Formation"
+ tech_eludium_floating_islands_desc: "While the islands infused with Eludium float naturally, buoyancy devices can be created under the islands of other worlds, allowing us to significantly expand living space on other planets."
+ tech_eludium_floating_islands_tt_desc: "§HUnlocks Decision:§! $decision_pd_add_floating_island$"
+ building_pd_eludium_floating_resort: "Floating Resort"
+ building_pd_eludium_floating_resort_desc: "Using Eludium to keep this structure aloft, this breathtaking resort offers spectacular views thanks to its sky-bound nature."
+ tech_eludium_floating_resort: "Floating Resort Construction"
+ tech_eludium_floating_resort_desc: "Using Eludium to keep the structures aloft, we can create breathtaking resorts that offer spectacular views due to their sky-bound nature."
+ tech_eludium_floating_overseer: "Floating Overseer Stations"
+ tech_eludium_floating_overseer_desc: "Using Eludium to keep structures aloft, we can create floating overseer stations to watch over our drones."
+ building_pd_eludium_floating_overseer: "Floating Overseer Station"
+ building_pd_eludium_floating_overseer_desc: "Using Eludium to keep the structures aloft, these floating overseer stations constantly remind our drones of their purpose."
 
  #Events
  pdfloating.100.name: "Islands in the Sky"
  pdfloating.100.desc: "After completing its scan of §Y[From.GetName]§!, the §Y[Root.GetName]§! reports a remarkable discovery. This planet's landmasses float in the sky, defying physics due to a unique ore called Eludium.\n\nThe properties of this extraordinary ore warrant further investigation. Securing and holding this planet will be crucial for studying Eludium's potential and unlocking its secrets."
  pdfloating.100.a: "How amazing."
+
+ #Origin
+ origin_pd_floating_world:0 "Islands in the Sky"
+ origin_pd_floating_world_desc:0 "This civilization evolved on a world unlike any other in the galaxy. Thanks to the element Eludium, this planet's landmasses float effortlessly through the sky."
+ origin_tooltip_floating_world_effects:0 "- $HOMEWORLD$$TABBED_NEW_LINE$- Planet Class: §Y$pc_continental$§!$TABBED_NEW_LINE$- Planet Modifier: ['concept_pd_floating', $pd_floating$]"
+ concept_pd_floating: "Floating World"
+ concept_pd_floating_desc: "This world is floating! TODO"
+
+#- Homeworld is a §Y$pc_floating$§! (Size: £planetsize£ §Y20§!) with a §YRare Planetary Feature§!\n- Habitability preference is set to §Y$trait_pc_floating_preference$§!.\n- Has access to several unique technologies.\n- §RDoes not get any guaranteed habitable worlds.§!"
 
  #Techno-Organic Origin #TODO_GATEMAN - Simply ported this over to test
  origin_techno_world:0 "The Children of Unit 04"
