--- a/planetary_diversity/localisation/english/planetarydiversity_domed_colonies_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_domed_colonies_l_english.yml
@@ -4,14 +4,14 @@
 #Megastructure
  pd_domed_colony_0: "Domed Colony"
  pd_domed_colony_0_DESC: "This planet holds the potential for terraforming. By establishing a Domed Colony, we can create a foothold that serves as a base for the gradual transformation of the planet's environment."
- pd_domed_colony_0_MEGASTRUCTURE_DETAILS: "A §YDomed Colony§! is a collection of self-sustaining planetside habitation domes on a planet with the potential to be terraformed."
+ pd_domed_colony_0_MEGASTRUCTURE_DETAILS: "A §YDomed Colony§! is a colony of self-sustaining planetside habitation domes on a planet with the potential to be terraformed."
  requires_terraforming_candidate: "$TRIGGER_FAIL$Must have a Terraforming Candidate modifier."
  requires_correct_planet_class: "$TRIGGER_FAIL$Planet Class must support Domed Colony construction."
  requires_pd_colony: "$TRIGGER_FAIL$There must be at least 1 Non-Artifical Colony in this system."
- requires_pd_moon_base_site: "$TRIGGER_FAIL$Must have a Domed Base Site modifier."
- pd_domed_base_0: "Domed Base"
- pd_domed_base_0_DESC: "This uninhabitable planet is an ideal site for a Domed Base. It is poised to become a hub supporting neighboring colonies in the solar system."
- pd_domed_base_0_MEGASTRUCTURE_DETAILS: "A §YDomed Base§! is a collection of self-sustaining planetside habitation domes of strategic value on an uninhabitable planet."
+ requires_pd_moon_base_site: "$TRIGGER_FAIL$Must have a Planetary Outpost Site modifier."
+ pd_domed_base_0: "Planetary Outpost"
+ pd_domed_base_0_DESC: "This uninhabitable planet is an ideal site for a Planetary Outpost. It is poised to become a hub supporting neighboring colonies in the solar system."
+ pd_domed_base_0_MEGASTRUCTURE_DETAILS: "A §YPlanetary Outpost§! is a self-sustaining base of strategic value on an uninhabitable planet. While not large enough for full-time colonization, it boosts the local system's economy."
  TARGET_DOME_BASE_NAME: "[FROM.from.planet.GetName] Base"
 
 #Missing Vanilla Tooltips
@@ -71,35 +71,35 @@
  hab_terraforming_candidate_desc: "Though barren and devoid of life, this planet has water in frozen form and may once have been home to a thriving ecosystem. With the right technology, it could be terraformed into a habitable world."
  pd_domed_colony: "Domed Colony"
  pd_domed_colony_desc: "The colony's residents live under an advanced network of protective domes, shielding them from the planet's inhospitable conditions. While offering safety, these structures demand high maintenance and expansion costs."
- pd_moon_base_trade: "Commercial Moon Base"
+ pd_moon_base_trade: "Commercial Moon Outpost"
  pd_moon_base_trade_desc: "Commercial districts, warehouses, and spaceports populate this advanced network of protective domes, establishing it as a bustling trade hub. Connected to its parent planet, this domed base relies on the vital link to the nearby habitable world for survival."
- pd_moon_base_military: "Military Moon Base"
+ pd_moon_base_military: "Military Moon Outpost"
  pd_moon_base_military_desc: "Armories, barracks, and launch pads dominate the landscape around this advanced network of protective domes. This domed base depends on the neighboring habitable world for logistical support."
- pd_moon_base_factory: "Factory Moon Base"
+ pd_moon_base_factory: "Factory Moon Outpost"
  pd_moon_base_factory_desc: "Factories, artisan workshops, and manufacturing centers are the heartbeat of this advanced network of protective domes. Linked to the nearby habitable world, it depends on this connection for resources and the distribution of its crafted goods."
- pd_moon_base_foundry: "Foundry Moon Base"
+ pd_moon_base_foundry: "Foundry Moon Outpost"
  pd_moon_base_foundry_desc: "Foundries and alloy processing plants are at the core of this advanced network of protective domes. Tied closely to its parent planet, this domed base depends on the essential connection to the nearby habitable world for raw materials and the export of its finished alloys."
- pd_moon_base_admin: "Administrative Moon Base"
+ pd_moon_base_admin: "Administrative Moon Outpost"
  pd_moon_base_admin_desc: "Government offices and bureaucratic agencies fill this advanced network of protective domes. Linked to its parent planet, this domed base relies on the crucial connection to the nearby habitable world for supplies and maintenance."
- pd_moon_base_priest: "Ecclesiastical Moon Base"
+ pd_moon_base_priest: "Ecclesiastical Moon Outpost"
  pd_moon_base_priest_desc: "Temples and shrines occupy this advanced network of protective domes, distinguishing it as a spiritual center for the faithful. This domed base is bound to its parent planet and depends on the sacred connection to the nearby habitable world."
- pd_domed_base_research: "Research Dome Base"
+ pd_domed_base_research: "Research  Base"
  pd_domed_base_research_desc: "Laboratories and research facilities dominate this advanced network of protective domes. It is tethered to planets within the solar system and depends on that link for essential resources."
- pd_domed_base_mining: "Mining Dome Base"
+ pd_domed_base_mining: "Mining Planetary Outpost"
  pd_domed_base_mining_desc: "Mines and extraction facilities are the backbone of this advanced network of protective domes. It is anchored to planets within the solar system, relying on this connection to supply essential resources and ship mined materials."
- pd_domed_base_energy: "Generator Dome Base"
+ pd_domed_base_energy: "Generator Planetary Outpost"
  pd_domed_base_energy_desc: "Power plants and energy converters form the core of this advanced network of protective domes. Linked to planets within the solar system, it depends on this connection for vital resources and the distribution of energy credits."
- pd_domed_base_food: "Hydroponics Dome Base"
+ pd_domed_base_food: "Hydroponics Planetary Outpost"
  pd_domed_base_food_desc: "Hydroponic farms and agricultural modules span this advanced network of protective domes. Connected to planets within the solar system, it relies on this connection for supplies and the dissemination of food supplies."
  pd_domed_moonbase_site: "Moonbase Site"
- pd_domed_moonbase_site_desc: "This moon is ideal for establishing a Domed Base, but it requires a colonized planet within the solar system to ensure its supply and sustainability."
- pd_domed_research_site: "Possible Research Dome Base Site"
+ pd_domed_moonbase_site_desc: "This moon is ideal for establishing a Planetary Outpost, but it requires a colonized planet within the solar system to ensure its supply and sustainability."
+ pd_domed_research_site: "Possible Research Planetary Outpost Site"
  pd_domed_research_site_desc: "This planetoid is ideal for establishing a Domed Research Base but requires a colonized planet within the solar system to ensure its supply and sustainability."
- pd_domed_mining_site: "Possible Mining Dome Base Site"
+ pd_domed_mining_site: "Possible Mining Planetary Outpost Site"
  pd_domed_mining_site_desc: "This planetoid is ideal for establishing a Domed Mining Base but requires a colonized planet within the solar system to ensure its supply and sustainability."
- pd_domed_food_site: "Possible Hydroponics Dome Base Site"
+ pd_domed_food_site: "Possible Hydroponics Planetary Outpost Site"
  pd_domed_food_site_desc: "This planetoid is ideal for establishing a Domed Hydrophincs Base but requires a colonized planet within the solar system to ensure its supply and sustainability."
- pd_domed_energy_site: "Possible Generator Dome Base Site"
+ pd_domed_energy_site: "Possible Generator Planetary Outpost Site"
  pd_domed_energy_site_desc: "This planetoid is ideal for establishing a Domed Generator Base but requires a colonized planet within the solar system to ensure its supply and sustainability."
 
 #Deposits
@@ -123,39 +123,39 @@
  d_phab_food_3: "Potassium Deposit"
  d_phab_food_3_desc: "Scattered potassium deposits on this planet could be vital for transforming its terrain into fertile grounds for food production post-terraforming."
  d_pd_solar_system_network_hub: "Intrasolar Network Hub"
- d_pd_solar_system_network_hub_desc: "This hub is a vital link for this solar system's planetary domed outposts. While the bases offer employment and accommodation, the central colony provides essential supplies and resources to sustain the operations."
+ d_pd_solar_system_network_hub_desc: "This hub is a vital link for this solar system's planetary outposts. While the bases offer employment and accommodation, the central colony provides essential supplies and resources to sustain the operations."
 
 #Technology
  tech_pd_domed_colonies: "Domed Habitation"
  tech_pd_domed_colonies_desc: "Technological advancements make it feasible to establish domed colonies on previously inhospitable planetary frontiers."
- allow_domed_colonies: "§HUnlocks Megastructures:§! §YDomed Colonies§! and §YDomed Bases§!"
+ allow_domed_colonies: "§HUnlocks Megastructures:§! §YDomed Colonies§! and §YPlanetary Outposts§!"
  allow_domed_colonies_DETAILS: "This technology will allow the construction of Domed Colonies and Bases on some uninhabitable worlds."
 
 #Decisions
  decision_build_solar_system_network_hub: "Build $d_pd_solar_system_network_hub$"
- decision_build_solar_system_network_hub_desc: "We will construct a hub linking the solar system's planetary Domed Bases to this world's economy."
+ decision_build_solar_system_network_hub_desc: "We will construct a hub linking the solar system's planetary Planetary Outposts to this world's economy."
  decision_remove_solar_system_network_hub: "Remove $d_pd_solar_system_network_hub$"
- decision_remove_solar_system_network_hub_desc: "We will remove the hub linking the solar system's planetary Domed Bases to this world's economy."
- decision_change_moon_base: "Replace Moon Domed Base"
- decision_change_moon_base_desc: "This will change the Domed Base on this moon."
- decision_change_moon_base_effects: "We will be able to choose a different use for this moon's Domed Base."
+ decision_remove_solar_system_network_hub_desc: "We will remove the hub linking the solar system's planetary Planetary Outposts to this world's economy."
+ decision_change_moon_base: "Replace Moon Planetary Outpost"
+ decision_change_moon_base_desc: "This will change the Planetary Outpost on this moon."
+ decision_change_moon_base_effects: "We will be able to choose a different use for this moon's Planetary Outpost."
  decision_pd_flood_domed_colony: "Flood Domed Colony"
  decision_pd_flood_domed_colony_desc: "Domed Colonies could be ideal for us - if only there was enough water. Our ice mining networks enable us to harvest ice from other celestial bodies and flood [This.GetName], making it into a domed aquarium."
 
 #Events
- pddomebases.100.name: "[From.GetName] Domed Base Complete"
- pddomebases.100.desc: "Construction of the Domed Base on §Y[From.GetName]§! is complete.\n\nHow should we direct its function?"
- pddomebases.100.trade: "Commercial Moon Base"
- pddomebases.100.trade.tt: "This domed moon base will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional £job_trader£ $job_trader_plural$ on connected colonies."
- pddomebases.100.military: "Military Moon Base"
- pddomebases.100.military.tt: "This domed moon base will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional £job_soldier£ [GetSoldierPlural] on connected colonies."
- pddomebases.100.factory: "Factory Moon Base"
- pddomebases.100.factory.tt: "This domed moon base will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional [GetArtisanIcon] [GetArtisanPlural] on connected colonies."
- pddomebases.100.foundry: "Foundry Moon Base"
- pddomebases.100.foundry.tt: "This domed moon base will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional £job_foundry£ §Y[GetAlloyProducerPlural]§! on connected colonies."
- pddomebases.100.admin: "Administrative Moon Base"
- pddomebases.100.admin.tt: "This domed moon base will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional [GetAdministratorWithIcon] on connected colonies."
- pddomebases.100.priest: "Ecclesiastical Moon Base"
+ pddomebases.100.name: "[From.GetName] Moon Outpost Complete"
+ pddomebases.100.desc: "Construction of the Moon Outpost on §Y[From.GetName]§! is complete.\n\nHow should we direct its function?"
+ pddomebases.100.trade: "Commercial Moon Outpost"
+ pddomebases.100.trade.tt: "This moon outpost will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional £job_trader£ $job_trader_plural$ on connected colonies."
+ pddomebases.100.military: "Military Moon Outpost"
+ pddomebases.100.military.tt: "This moon outpost will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional £job_soldier£ [GetSoldierPlural] on connected colonies."
+ pddomebases.100.factory: "Factory Moon Outpost"
+ pddomebases.100.factory.tt: "This moon outpost will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional [GetArtisanIcon] [GetArtisanPlural] on connected colonies."
+ pddomebases.100.foundry: "Foundry Moon Outpost"
+ pddomebases.100.foundry.tt: "This moon outpost will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional £job_foundry£ §Y[GetAlloyProducerPlural]§! on connected colonies."
+ pddomebases.100.admin: "Administrative Moon Outpost"
+ pddomebases.100.admin.tt: "This moon outpost will connect to the planetside §Y$d_pd_solar_system_network_hub$§!, granting additional [GetAdministratorWithIcon] on connected colonies."
+ pddomebases.100.priest: "Ecclesiastical Moon Outpost"
  pddomebases.100.priest.tt: "$pddomebases.100.admin.tt$"
 
 #Origin
@@ -163,20 +163,20 @@
  origin_pd_interplanetary_settlers_desc: "Before the stars were reachable, this empire laid its foundations, erecting domed habitats across the moons and planets of their home system. Now, armed with FTL technology, they stand on the brink of a new era, ready to expand their reach into the uncharted realms of space."
  origin_tooltip_pd_interplanetary_settlers_start_effects: "- $INITIAL_POPS$ §G+2§!$NEW_LINE$- $HOMEWORLD$$TABBED_NEW_LINE$- ['concept_pd_network_hub', $d_pd_solar_system_network_hub$]$NEW_LINE$- Homeworld's Moon:$TABBED_NEW_LINE$- ['concept_pd_moonbase', $pd_domed_base_0$]$NEW_LINE$- Colony:$TABBED_NEW_LINE$- ['concept_pd_domed_colony', $pd_domed_colony_0$]$NEW_LINE$- $ADDITONAL_TECHNOLOGIES_STRING$ ['concept_tech_pd_domed_colonies', £engineering£ $tech_pd_domed_colonies$]"
  pd_interplanetary_system_initializer_NAME: "Random Domed System"
- pd_interplanetary_system_initializer_DESC: "Random start system with one Domed Colony and one Domed Base."
+ pd_interplanetary_system_initializer_DESC: "Random start system with one Domed Colony and one Planetary Outpost."
  pd_interplanetary_sol_system_initializer_NAME: "Sol Domed System"
- pd_interplanetary_sol_system_initializer_DESC: "Sol start system with one Domed Colony and one Domed Base."
+ pd_interplanetary_sol_system_initializer_DESC: "Sol start system with one Domed Colony and one Planetary Outpost."
 
 #Concepts
  concept_pd_network_hub: "$d_pd_solar_system_network_hub$"
- concept_pd_network_hub_desc: "Grants numerous jobs based on capital level and constructed ['concept_pd_moonbases', Domed Bases] in the solar system.\n\n§L$d_pd_solar_system_network_hub_desc$§!"
- concept_pd_moonbase: "Domed Base"
- concept_pd_moonbase_desc: "These bases connect to any §Y$d_pd_solar_system_network_hub$§! in the system, granting those planets extra jobs.\n\n§L$pd_domed_base_0_MEGASTRUCTURE_DETAILS$§!"
+ concept_pd_network_hub_desc: "Grants numerous jobs based on capital level and constructed ['concept_pd_moonbases', Planetary Outposts] in the solar system.\n\n§L$d_pd_solar_system_network_hub_desc$§!"
+ concept_pd_moonbase: "Planetary Outpost"
+ concept_pd_moonbase_desc: "These outposts connect to any §Y$d_pd_solar_system_network_hub$§! in the system, granting those planets extra jobs.\n\n§L$pd_domed_base_0_MEGASTRUCTURE_DETAILS$§!"
  concept_pd_domed_colony: "Domed Colony"
  concept_pd_domed_colony_desc: "Built on planets with the §Y$terraforming_candidate$§! modifier which allow pre-terraforming colonization.\n\n§L$pd_domed_colony_0_MEGASTRUCTURE_DETAILS$§!"
  concept_tech_pd_domed_colonies: "$tech_pd_domed_colonies$"
  concept_tech_pd_domed_colonies_desc: "$allow_domed_colonies$\n\n§L$tech_pd_domed_colonies_desc$§!"
- concept_pd_moonbases: "Domed Bases"
+ concept_pd_moonbases: "Planetary Outposts"
  concept_pd_domed_colonies: "Domed Colonies"
 
 #Warning
