--- a/planetary_diversity_arcologies/localisation/german/planetarydiversity_more_arcologies_capital_l_german.yml
+++ b/planetary_diversity_arcologies/localisation/german/planetarydiversity_more_arcologies_capital_l_german.yml
@@ -1,36 +1,36 @@
 ﻿l_german:
 
-#Senate
- decision_pd_arcology_senate: "Build Senate Dome"
- decision_pd_arcology_senate_desc: "To meet the expanding needs of our nation, we must construct a monumental senate building on our capital, dedicating substantial space to enhance our government's administration capabilities."
- decision_pd_arcology_senate_effects: "Adds the §Y$d_pd_senate_building$§! to this capital, exhanging potential distrticts to enhance our government's administration capabilities."
- d_pd_senate_building: "Senate Dome"
- d_pd_senate_building_desc: "The Senate Dome, a majestic symbol of governance, stands tall as the administrative heart where our civilization's future is forged."
+#Senat
+decision_pd_arcology_senate: "Senatskuppel bauen"
+decision_pd_arcology_senate_desc: "Um den wachsenden Bedürfnissen unseres Landes gerecht zu werden, müssen wir in unserer Hauptstadt ein monumentales Senatsgebäude errichten und viel Platz für die Verbesserung der Verwaltungskapazitäten unserer Regierung bereitstellen."
+decision_pd_arcology_senate_effects: "Fügt dieser Hauptstadt das §Y$d_pd_senate_building$§! hinzu und tauscht potenzielle Bezirke aus, um die Verwaltungskapazitäten unserer Regierung zu verbessern."
+d_pd_senate_building: "Senatskuppel"
+d_pd_senate_building_desc: "Die Kuppel des Senats, ein majestätisches Symbol der Regierung, ragt hoch auf als das administrative Herz, in dem die Zukunft unserer Zivilisation geschmiedet wird."
 
-#Palace
- decision_pd_arcology_palace: "Build Palatial Complex"
- decision_pd_arcology_palace_desc: "To reflect the might and authority of our empire, we shall erect a colossal palace within our capital. This grand edifice will embody the power of our leadership and significantly augment our governmental administration."
- decision_pd_arcology_palace_effects: "Adds the §Y$d_pd_palace_building$§! to this capital, exhanging potential distrticts to enhance our government's administration capabilities."
- d_pd_palace_building: "Palatial Complex"
- d_pd_palace_building_desc: "The Palace Complex, a grand symbol of our sovereignty and ruler's power, dominates the capital. It is the heart of governance, where our empire's destiny is shaped."
+#Palast
+decision_pd_arcology_palace: "Palastkomplex bauen"
+decision_pd_arcology_palace_desc: "Um die Macht und Autorität unseres Reiches widerzuspiegeln, werden wir in unserer Hauptstadt einen kolossalen Palast errichten. Dieses großartige Gebäude wird die Macht unserer Führung verkörpern und unsere Regierungsverwaltung erheblich stärken."
+decision_pd_arcology_palace_effects: "Fügt dieser Hauptstadt das §Y$d_pd_palace_building$§! hinzu und tauscht potenzielle Bezirke aus, um die Verwaltungskapazitäten unserer Regierung zu verbessern."
+d_pd_palace_building: "Palastkomplex"
+d_pd_palace_building_desc: "Der Palastkomplex, ein großartiges Symbol unserer Souveränität und Herrschermacht, dominiert die Hauptstadt. Er ist das Herz der Regierung, wo das Schicksal unseres Reiches geformt wird."
 
-#Headquarters
- decision_pd_arcology_headquarters: "Build Planetary Headquarters"
- decision_pd_arcology_headquarters_desc: "To showcase the power and influence of our megacorporation, we will construct a towering headquarters in this economic hub. This imposing structure will represent our leadership's strength and greatly enhance our galatic operations."
- decision_pd_arcology_headquarters_effects: "Adds the §Y$d_pd_headquarters_building$§! to this capital, exhanging potential distrticts to enhance our corporation's administration capabilities."
- d_pd_headquarters_building: "Planetary Headquarters"
- d_pd_headquarters_building_desc: "A monumental symbol of dominanct, this headquarters towers over the planet. It serves as the nerve center for our operations, where the future of our megacorporation is crafted."
+#Hauptsitz
+decision_pd_arcology_headquarters: "Planetenhauptquartier bauen"
+decision_pd_arcology_headquarters_desc: "Um die Macht und den Einfluss unseres Megakonzerns zu demonstrieren, werden wir in diesem Wirtschaftszentrum ein gewaltiges Hauptquartier errichten. Dieses imposante Gebäude wird die Stärke unserer Führung repräsentieren und unsere galaktischen Operationen erheblich verbessern."
+decision_pd_arcology_headquarters_effects: "Fügt dieser Hauptstadt das §Y$d_pd_headquarters_building$§! hinzu und tauscht potenzielle Bezirke aus, um die Verwaltungskapazitäten unseres Unternehmens zu verbessern."
+d_pd_headquarters_building: "Planetarisches Hauptquartier"
+d_pd_headquarters_building_desc: "Als monumentales Symbol der Dominanz überragt dieses Hauptquartier den Planeten. Es dient als Nervenzentrum für unsere Operationen, wo die Zukunft unseres Megakonzerns gestaltet wird."
 
-#Hive Confluence Spire
- decision_pd_hive_confluence_spire: "Build Confluence Spire"
- decision_pd_hive_confluence_spire_desc: "To manifest the supremacy and reach of our collective, we shall grow a mighty confluence spire. This commanding structure will significantly amplify our operations across the stars."
- decision_pd_hive_confluence_spire_effects: "Adds the §Y$d_pd_confluence_spire_building$§! to this capital, exhanging potential distrticts to enhance our administration capabilities."
- d_pd_confluence_spire_building: "Confluence Spire"
- d_pd_confluence_spire_building_desc: "This spire stands supreme across the planet's surface, a towering beacon of control. It is the hub of our collective will, where our path among the stars is intricately woven."
+#Hive-Zusammenflussturm
+decision_pd_hive_confluence_spire: "Confluence Spire erstellen"
+decision_pd_hive_confluence_spire_desc: "Um die Überlegenheit und Reichweite unseres Kollektivs zu demonstrieren, werden wir einen mächtigen Konfluenzturm errichten. Diese Kommandostruktur wird unsere Operationen über die Sterne hinweg deutlich verstärken."
+decision_pd_hive_confluence_spire_effects: "Fügt dieser Hauptstadt das §Y$d_pd_confluence_spire_building$§! hinzu und tauscht potenzielle Bezirke aus, um unsere Verwaltungskapazitäten zu verbessern."
+d_pd_confluence_spire_building: "Confluence-Turm"
+d_pd_confluence_spire_building_desc: "Dieser Turm thront erhaben über der Oberfläche des Planeten, ein gewaltiges Leuchtfeuer der Kontrolle. Er ist der Mittelpunkt unseres kollektiven Willens, wo unser Weg zwischen den Sternen auf komplexe Weise verwoben ist."
 
-#Machine Centralized Processing
- decision_pd_machine_centralized_processing: "Build Centralized Processing Unit"
- decision_pd_machine_centralized_processing_desc: "To assert our superiority and extend operational capacity, we will construct a Centralized Processing Unit. This structure will significantly boost our galactic functions."
- decision_pd_machine_centralized_processing_effects: "Adds the §Y$d_pd_machine_centralized_processing$§! to this capital, exhanging potential distrticts to enhance our administration capabilities."
- d_pd_machine_centralized_processing: "Centralized Processing Unit"
- d_pd_machine_centralized_processing_desc: "This processing unit dominates the planetary surface and is the central node for our collective directives, intricately orchestrating our drones."
+#Maschinenzentralisierte Verarbeitung
+decision_pd_machine_centralized_processing: "Zentrale Verarbeitungseinheit erstellen"
+decision_pd_machine_centralized_processing_desc: "Um unsere Überlegenheit zu behaupten und unsere operative Kapazität zu erweitern, werden wir eine zentrale Verarbeitungseinheit errichten. Diese Struktur wird unsere galaktischen Funktionen erheblich verbessern."
+decision_pd_machine_centralized_processing_effects: "Fügt dieser Hauptstadt das §Y$d_pd_machine_centralized_processing$§! hinzu und tauscht potenzielle Bezirke aus, um unsere Verwaltungskapazitäten zu verbessern."
+d_pd_machine_centralized_processing: "Zentralisierte Verarbeitungseinheit"
+d_pd_machine_centralized_processing_desc : "Diese Verarbeitungseinheit dominiert die Planetenoberfläche und ist der zentrale Knotenpunkt für unsere gemeinsamen Anweisungen. Sie orchestriert unsere Drohnen auf komplexe Weise."
