--- a/planetary_diversity_ascension_worlds/localisation/german/planetarydiversity_aw_l_german.yml
+++ b/planetary_diversity_ascension_worlds/localisation/german/planetarydiversity_aw_l_german.yml
@@ -1,12 +1,12 @@
-﻿l_english:
+﻿l_german:
 
-#Terraforming Warning
- pd_planet_no_terraform: "$TRIGGER_FAIL$ This planet cannot be terraformed with standard procedures."
+#Terraforming-Warnung
+pd_planet_no_terraform: "$TRIGGER_FAIL$ Dieser Planet kann nicht mit Standardverfahren terraformt werden."
 
 ###Arcology/Relic
- pc_pd_nuked_arcology: "Nuked Relic World"
- pc_pd_nuked_arcology_desc: "A city once stretched across this entire world. It is experiencing a nuclear winter, with dense layers of sooty aerosols in the atmosphere. High levels of surface radiation. Minimal signs of life."
- pc_pd_nuked_arcology_tooltip: "Habitability: §R-100%§!\nHabitability: §G+100%§! with §Y$trait_pc_nuked_preference$§! or §Y$trait_survivor$§! trait"
+pc_pd_nuked_arcology: "Atombombardierte Reliktwelt"
+pc_pd_nuked_arcology_desc: "Eine Stadt erstreckte sich einst über diese ganze Welt. Sie erlebt einen nuklearen Winter mit dichten Schichten rußiger Aerosole in der Atmosphäre. Hohe Strahlungswerte auf der Oberfläche. Minimale Lebenszeichen."
+pc_pd_nuked_arcology_tooltip: "Bewohnbarkeit: §R-100 %§!\nBewohnbarkeit: §G+100 %§! mit §Y$trait_pc_nuked_preference$§! oder §Y$trait_survivor$§! Merkmal"
 
-###Dummy Class Warning
- DO_NOT_USE: "DUMMY CLASS - DO NOT USE"
+###Dummy-Klassenwarnung
+DO_NOT_USE: "DUMMY-KLASSE – NICHT VERWENDEN"
