--- a/planetary_diversity_ascension_worlds/localisation/german/planetarydiversity_aw_lithoid_l_german.yml
+++ b/planetary_diversity_ascension_worlds/localisation/german/planetarydiversity_aw_lithoid_l_german.yml
@@ -1,95 +1,95 @@
-﻿l_english:
-###Lithoid Planets
-#Decision
- decision_pd_aw_lithoid_planet: "Create Lithotrophic Ecosystem"
- decision_pd_aw_lithoid_planet_desc: "This world waits to be etched into one of crystal and stone. The feeble biological ecosystem sits in our way."
- decision_pd_aw_lithoid_planet_effects_short: "A lithotrophic ecosystem will be chiseled on this world, enabling us to finely tune the crystalline frequencies to better suit our needs."
- decision_pd_aw_lithoid_planet_tooltip: "Once complete, we will be able to choose the frequency of this planet's lithotrophic crystals."
- decision_pd_aw_lithoid_planet_cleanup: "Restore Biological Ecosystem"
- decision_pd_aw_lithoid_planet_cleanup_desc: "We must restore this planet's biological ecosystem to its original glory."
- decision_pd_aw_lithoid_planet_cleanup_effects_short: "The artificially created lithotrophic ecosystem will be removed, restoring it to a biological nature."
- decision_pd_aw_lithoid_planet_cleanup_tooltip: "All Lithotrophic Modifiers will be removed, and the planet will be returned to a biological ecosystem."
- decision_pd_aw_lithoid_change_frequency: "Change Lithotrophic Frequency"
- decision_pd_aw_lithoid_change_frequency_desc: "We will change the frequency of the lithotrophic ecosystem crystals to better suit our needs."
- decision_pd_aw_lithoid_change_frequency_effects_short: "We can change the frequency of this planet's crystals."
- decision_pd_aw_lithoid_change_frequency_tooltip: "The current Lithotrophic modifier will be removed, allowing us to change it to a different frequency."
+﻿l_german :
+### Lithoide Planeten
+#Entscheidung
+decision_pd_aw_lithoid_planet : " Lithotrophes Ökosystem erstellen "
+decision_pd_aw_lithoid_planet_desc : "Diese Welt wartet darauf, in eine Welt aus Kristall und Stein geätzt zu werden. Das schwache biologische Ökosystem steht uns im Weg."
+decision_pd_aw_lithoid_planet_effects_short : " Auf dieser Welt wird ein lithotrophes Ökosystem geschaffen, das es uns ermöglicht, die kristallinen Frequenzen fein abzustimmen, um sie besser an unsere Bedürfnisse anzupassen."
+decision_pd_aw_lithoid_planet_tooltip : "Sobald dies abgeschlossen ist, können wir die Häufigkeit der lithotrophen Kristalle dieses Planeten auswählen."
+decision_pd_aw_lithoid_planet_cleanup : "Biologisches Ökosystem wiederherstellen"
+decision_pd_aw_lithoid_planet_cleanup_desc : "Wir müssen das biologische Ökosystem dieses Planeten wieder in seiner ursprünglichen Pracht erstrahlen lassen."
+decision_pd_aw_lithoid_planet_cleanup_effects_short : "Das künstlich geschaffene lithotrophe Ökosystem wird entfernt und sein biologischer Charakter wiederhergestellt."
+decision_pd_aw_lithoid_planet_cleanup_tooltip : "Alle lithotrophen Modifikatoren werden entfernt und der Planet wird in ein biologisches Ökosystem zurückverwandelt."
+decision_pd_aw_lithoid_change_frequency : " Lithotrophe Frequenz ändern"
+decision_pd_aw_lithoid_change_frequency_desc : "Wir werden die Häufigkeit der Kristalle des lithotrophen Ökosystems ändern, um sie unseren Bedürfnissen anzupassen."
+decision_pd_aw_lithoid_change_frequency_effects_short : "Wir können die Frequenz der Kristalle dieses Planeten ändern."
+decision_pd_aw_lithoid_change_frequency_tooltip : "Der aktuelle lithotrophe Modifikator wird entfernt, sodass wir ihn auf eine andere Frequenz ändern können."
 
-#Modifiers
- pd_aw_lithoid_planet_cyan: "Lithotrophic World"
- pd_aw_lithoid_planet_cyan_desc: "Frequency: 500 nm\nThe resonating vibrations foster goodwill and catalyze an accelerated growth rate for Lithoids."
- pd_aw_lithoid_planet_red: "Lithotrophic World"
- pd_aw_lithoid_planet_red_desc: "Frequency: 650 nm\nThe robust crystalline resonance synergizes seamlessly with mineral deposits, rendering them more accessible for extraction."
- pd_aw_lithoid_planet_yellow: "Lithotrophic World"
- pd_aw_lithoid_planet_yellow_desc: "Frequency: 580 nm\nThe dynamic harmonics of this crystalline resonance seamlessly integrate with our power networks, unlocking their total capacity."
+#Modifikatoren
+pd_aw_lithoid_planet_cyan : " Lithotrophe Welt"
+pd_aw_lithoid_planet_cyan_desc : "Frequenz: 500 nm\ nDie resonierenden Vibrationen fördern den guten Willen und katalysieren eine beschleunigte Wachstumsrate der Lithoiden ."
+pd_aw_lithoid_planet_red : " Lithotrophe Welt"
+pd_aw_lithoid_planet_red_desc : "Frequenz: 650 nm\ nDie robuste kristalline Resonanz synergiert nahtlos mit Mineralvorkommen und macht sie für die Gewinnung leichter zugänglich."
+pd_aw_lithoid_planet_yellow : " Lithotrophe Welt"
+pd_aw_lithoid_planet_yellow_desc : "Frequenz: 580 nm\ nDie dynamischen Harmonischen dieser kristallinen Resonanz integrieren sich nahtlos in unsere Stromnetze und setzen deren gesamte Kapazität frei."
 
-#Acension Perk
- ap_pd_lithoid_worlds: "Lithotrophic Worlds"
- ap_pd_lithoid_worlds_desc: "We will sculpt our worlds into unyielding lithotrophic paradises, forging a bedrock of eternal stability."
- allow_lithoid_worlds: "§HUnlocks Decision:§! $decision_pd_aw_lithoid_planet$"
- describe_lithoid_worlds: "§YLithotrophic Worlds§! are a special planet class with lithotrophic based ecosystems, which allows for frequency tuning of large crystal structure which can improve $i_unity$, $i_minerals$ or $i_energy$.\n$MOD_LITHOID_POP_HAPPINESS$: §G25%§!\n$mod_LITHOID_pop_growth_speed$: §G25%§!\n$MOD_BIOLOGICAL_POP_HAPPINESS$: §R-50%§!\n$mod_BIOLOGICAL_pop_growth_speed_reduction$: §R-50%§!"
+# Aufstiegsvorteil
+ap_pd_lithoid_worlds : " Lithotrophe Welten"
+ap_pd_lithoid_worlds_desc : "Wir werden unsere Welten in unnachgiebige lithotrophe Paradiese verwandeln und ein Fundament ewiger Stabilität schmieden."
+allow_lithoid_worlds : "§ HEntsperrt Entscheidung :§ ! $ decision_pd_aw_lithoid_planet $"
+describe_lithoid_worlds : "§ YLithotrophe Welten§! sind eine spezielle Planetenklasse mit Ökosystemen auf lithotropher Basis, die eine Frequenzabstimmung großer Kristallstrukturen ermöglichen, die $ i_unity $, $ i_minerals $ oder $ i_energy $ verbessern können.\ n$MOD_LITHOID_POP_HAPPINESS $: §G25%§!\ n$mod_LITHOID_pop_growth_speed $: §G25%§!\ n$MOD_BIOLOGICAL_POP_HAPPINESS $: §R-50%§!\ n$mod_BIOLOGICAL_pop_growth_speed_reduction $: §R-50%§!"
 
-#Notification Message
- MESSAGE_PD_AW_LITHOID_DESC:1 "$PLANET|Y$ is now a §YLithotrophic World§!"
- MESSAGE_PD_AW_LITHOID_MESSAGE_TYPE_TITLE: "Lithotrophic Biome Complete"
- MESSAGE_PD_AW_LITHOID_CLEANUP_DESC:1 "The biological biome on $PLANET|Y$ as been restored."
- MESSAGE_PD_AW_LITHOID_CLEANUP_MESSAGE_TYPE_TITLE: "Lithotrophic Biome Removed"
+#Benachrichtigungsnachricht
+MESSAGE_PD_AW_LITHOID_DESC: 1 "$PLANET|Y$ ist jetzt eine § YLithotrophe Welt§!"
+MESSAGE_PD_AW_LITHOID_MESSAGE_TYPE_TITLE: " Lithotrophes Biom abgeschlossen"
+MESSAGE_PD_AW_LITHOID_CLEANUP_DESC: 1 "Das biologische Biom auf $PLANET|Y$ wurde wiederhergestellt."
+MESSAGE_PD_AW_LITHOID_CLEANUP_MESSAGE_TYPE_TITLE: " Lithotrophes Biom entfernt"
 
-#Choose Event
- pdawlithoidplanets.100.name: "Crystalline Frequency"
- pdawlithoidplanets.100.desc: "What resonant frequency shall we attune the lithotrophic biome on §Y[This.GetName]§!?"
- pdawlithoidplanets.100.cyan: "Cyan"
- pdawlithoidplanets.100.cyan.tooltip: "This resonating frequency acts as a cohesive force, fostering unity among our lithoid populace and nurturing a harmonious surge in population growth."
- pdawlithoidplanets.100.red: "Red"
- pdawlithoidplanets.100.red.tooltip: "This resonance synergizes seamlessly with mineral deposits, rendering them more accessible and ripe for extraction.""
- pdawlithoidplanets.100.yellow: "Yellow"
- pdawlithoidplanets.100.yellow.tooltip: "This resonating frequency seamlessly integrates with our power networks, unlocking a surge in their total capacity."
+#Veranstaltung auswählen
+pdawlithoidplanets.100.name: "Kristalline Frequenz"
+pdawlithoidplanets.100.desc: "Auf welche Resonanzfrequenz sollen wir das lithotrophe Biom auf § Y[ This.GetName ]§! abstimmen?"
+pdawlithoidplanets.100.cyan: "Cyan"
+pdawlithoidplanets.100.cyan.tooltip: "Diese Resonanzfrequenz wirkt wie eine verbindende Kraft, die die Einheit unserer lithoiden Bevölkerung fördert und einen harmonischen Anstieg des Bevölkerungswachstums begünstigt."
+pdawlithoidplanets.100.red: "Rot"
+pdawlithoidplanets.100.red.tooltip: "Diese Resonanz wirkt nahtlos mit Mineralvorkommen zusammen und macht sie leichter zugänglich und reif für die Gewinnung.""
+pdawlithoidplanets.100.yellow: "Gelb"
+pdawlithoidplanets.100.yellow.tooltip: "Diese Resonanzfrequenz lässt sich nahtlos in unsere Stromnetze integrieren und ermöglicht eine Steigerung ihrer Gesamtkapazität."
 
-#Dummy Classes
- pc_pd_lithoid_cyan: "$DO_NOT_USE$"
- pc_pd_lithoid_cyan_desc: "$DO_NOT_USE$"
- pc_pd_lithoid_cyan_adj: "$DO_NOT_USE$"
- mod_pc_pd_lithoid_cyan_habitability: "$DO_NOT_USE$"
- trait_pc_pd_lithoid_cyan_preference: "$DO_NOT_USE$"
- trait_pc_pd_lithoid_cyan_preference_desc: "$DO_NOT_USE$"
- pc_pd_lithoid_red: "$DO_NOT_USE$"
- pc_pd_lithoid_red_desc: "$DO_NOT_USE$"
- pc_pd_lithoid_red_adj: "$DO_NOT_USE$"
- mod_pc_pd_lithoid_red_habitability: "$DO_NOT_USE$"
- trait_pc_pd_lithoid_red_preference: "$DO_NOT_USE$"
- trait_pc_pd_lithoid_red_preference_desc: "$DO_NOT_USE$"
- pc_pd_lithoid_yellow: "$DO_NOT_USE$"
- pc_pd_lithoid_yellow_desc: "$DO_NOT_USE$"
- pc_pd_lithoid_yellow_adj: "$DO_NOT_USE$"
- mod_pc_pd_lithoid_yellow_habitability: "$DO_NOT_USE$"
- trait_pc_pd_lithoid_yellow_preference: "$DO_NOT_USE$"
- trait_pc_pd_lithoid_yellow_preference_desc: "$DO_NOT_USE$"
- pc_pd_lithoid_aquatic: "$DO_NOT_USE$"
- pc_pd_lithoid_aquatic_desc: "$DO_NOT_USE$"
- pc_pd_lithoid_aquatic_adj: "$DO_NOT_USE$"
- mod_pc_pd_lithoid_aquatic_habitability: "$DO_NOT_USE$"
- trait_pc_pd_lithoid_aquatic_preference: "$DO_NOT_USE$"
- trait_pc_pd_lithoid_aquatic_preference_desc: "$DO_NOT_USE$"
- pc_pd_lithoid_shroud: "$DO_NOT_USE$"
- pc_pd_lithoid_shroud_desc: "$DO_NOT_USE$"
- pc_pd_lithoid_shroud_adj: "$DO_NOT_USE$"
- mod_pc_pd_lithoid_shroud_habitability: "$DO_NOT_USE$"
- trait_pc_pd_lithoid_shroud_preference: "$DO_NOT_USE$"
- trait_pc_pd_lithoid_shroud_preference_desc: "$DO_NOT_USE$"
- pc_pd_lithoid_necro: "$DO_NOT_USE$"
- pc_pd_lithoid_necro_desc: "$DO_NOT_USE$"
- pc_pd_lithoid_necro_adj: "$DO_NOT_USE$"
- mod_pc_pd_lithoid_necro_habitability: "$DO_NOT_USE$"
- trait_pc_pd_lithoid_necro_preference: "$DO_NOT_USE$"
- trait_pc_pd_lithoid_necro_preference_desc: "$DO_NOT_USE$"
- pc_pd_lithoid_aquatic_shroud: "$DO_NOT_USE$"
- pc_pd_lithoid_aquatic_shroud_desc: "$DO_NOT_USE$"
- pc_pd_lithoid_aquatic_shroud_adj: "$DO_NOT_USE$"
- mod_pc_pd_lithoid_aquatic_shroud_habitability: "$DO_NOT_USE$"
- trait_pc_pd_lithoid_aquatic_shroud_preference: "$DO_NOT_USE$"
- trait_pc_pd_lithoid_aquatic_shroud_preference_desc: "$DO_NOT_USE$"
- pc_pd_lithoid_necro_shroud: "$DO_NOT_USE$"
- pc_pd_lithoid_necro_shroud_desc: "$DO_NOT_USE$"
- pc_pd_lithoid_necro_shroud_adj: "$DO_NOT_USE$"
- mod_pc_pd_lithoid_necro_shroud_habitability: "$DO_NOT_USE$"
- trait_pc_pd_lithoid_necro_shroud_preference: "$DO_NOT_USE$"
- trait_pc_pd_lithoid_necro_shroud_preference_desc: "$DO_NOT_USE$"
+#Dummy-Klassen
+pc_pd_lithoid_cyan : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_cyan_desc : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_cyan_adj : "$NICHT_VERWENDEN$"
+mod_pc_pd_lithoid_cyan_habitability : "$NICHT_VERWENDEN$"
+trait_pc_pd_lithoid_cyan_preference : "$NICHT_VERWENDEN$"
+trait_pc_pd_lithoid_cyan_preference_desc : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_red : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_red_desc : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_red_adj : "$NICHT_VERWENDEN$"
+mod_pc_pd_lithoid_red_habitability : "$NICHT_VERWENDEN$"
+trait_pc_pd_lithoid_red_preference : "$NICHT_VERWENDEN$"
+trait_pc_pd_lithoid_red_preference_desc : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_yellow : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_yellow_desc : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_yellow_adj : "$NICHT_VERWENDEN$"
+mod_pc_pd_lithoid_yellow_habitability : "$NICHT_VERWENDEN$"
+trait_pc_pd_lithoid_yellow_preference : "$NICHT_VERWENDEN$"
+trait_pc_pd_lithoid_yellow_preference_desc : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_aquatic : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_aquatic_desc : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_aquatic_adj : "$NICHT_VERWENDEN$"
+mod_pc_pd_lithoid_aquatic_habitability : "$NICHT_VERWENDEN$"
+trait_pc_pd_lithoid_aquatic_preference : "$NICHT_VERWENDEN$"
+trait_pc_pd_lithoid_aquatic_preference_desc : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_shroud : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_shroud_desc : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_shroud_adj : "$NICHT_VERWENDEN$"
+mod_pc_pd_lithoid_shroud_habitability : "$NICHT_VERWENDEN$"
+trait_pc_pd_lithoid_shroud_preference : "$NICHT_VERWENDEN$"
+trait_pc_pd_lithoid_shroud_preference_desc : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_necro : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_necro_desc : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_necro_adj : "$NICHT_VERWENDEN$"
+mod_pc_pd_lithoid_necro_habitability : "$NICHT_VERWENDEN$"
+trait_pc_pd_lithoid_necro_preference : "$NICHT_VERWENDEN$"
+trait_pc_pd_lithoid_necro_preference_desc : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_aquatic_shroud : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_aquatic_shroud_desc : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_aquatic_shroud_adj : "$NICHT_VERWENDEN$"
+mod_pc_pd_lithoid_aquatic_shroud_habitability : "$NICHT_VERWENDEN$"
+trait_pc_pd_lithoid_aquatic_shroud_preference : "$NICHT_VERWENDEN$"
+trait_pc_pd_lithoid_aquatic_shroud_preference_desc : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_necro_shroud : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_necro_shroud_desc : "$NICHT_VERWENDEN$"
+pc_pd_lithoid_necro_shroud_adj : "$NICHT_VERWENDEN$"
+mod_pc_pd_lithoid_necro_shroud_habitability : "$NICHT_VERWENDEN$"
+trait_pc_pd_lithoid_necro_shroud_preference : "$NICHT_VERWENDEN$"
+trait_pc_pd_lithoid_necro_shroud_preference_desc : "$NICHT_VERWENDEN$"
