--- a/planetary_diversity_ascension_worlds/localisation/german/planetarydiversity_aw_superprojects_l_german.yml
+++ b/planetary_diversity_ascension_worlds/localisation/german/planetarydiversity_aw_superprojects_l_german.yml
@@ -1,74 +1,76 @@
-﻿l_english:
-#Planetary Superprojects
- #Notification
- MESSAGE_PD_AW_SUPERPROJECT_DESC: "The superproject on $PLANET|Y$ is complete."
- MESSAGE_PD_AW_SUPERPROJECT_MESSAGE_TYPE_TITLE: "Planetary Superproject Complete"
+﻿l_german:
+#Planeten-Superprojekte
+#Benachrichtigung
+MESSAGE_PD_AW_SUPERPROJECT_DESC: "Das Superprojekt auf $PLANET|Y$ ist abgeschlossen."
 
-#Core Tap
- #Planet Class
- pc_pd_core_tap: "Core Tap"
- pc_pd_core_tap_desc: "This rocky world now hosts a vast network of machines burrowing into its core to extract primal energy, a testament to engineering prowess that has destroyed the planet's original ecosystem."
- pc_pd_core_tap_adj: "energetic"
- mod_pc_pd_core_tap_habitability: "Core Tap Habitability"
- trait_pc_pd_core_tap_preference: "Core Tap Prefernce"
- trait_pc_pd_core_tap_preference_desc: "$trait_pc_arctic_preference_desc$"
+MESSAGE_PD_AW_SUPERPROJECT_MESSAGE_TYPE_TITLE: "Planeten-Superprojekt abgeschlossen"
 
- #Decision
- decision_pd_aw_core_tap: "Planetary Superproject: Core Tap"
- decision_pd_aw_core_tap_desc: "By creating a network of machines that burrow into the very core of this world, we will be able to generate an incredible amount of energy at the expense of the planet's ecosystem."
- decision_pd_megacoretap_requirements: "£trigger_no£ §RThere can be no other districts but§! §Y$district_generator_plural$§!"
+#Kernabgriff
+#Planetenklasse
+pc_pd_core_tap: "Kernabgriff"
+pc_pd_core_tap_desc: "Diese felsige Welt beherbergt jetzt ein riesiges Netzwerk von Maschinen, die sich in ihren Kern graben, um Urenergie zu gewinnen, ein Beweis für die Ingenieursleistung, die das ursprüngliche Ökosystem des Planeten zerstört hat."
+pc_pd_core_tap_adj: "energetisch"
+mod_pc_pd_core_tap_habitability: "Bewohnbarkeit des Kernanschlusses"
+trait_pc_pd_core_tap_preference: "Vorliebe für Kernanschluss"
+trait_pc_pd_core_tap_preference_desc: "$trait_pc_arctic_preference_desc$"
 
- #Modifier
- pd_aw_core_tap: "Core Tap"
- pd_aw_core_tap_desc: "This world boasts a vast network of machines burrowing into its core to extract primal energy, but destorying the orignal ecosystem in the process."
+#Entscheidung
+decision_pd_aw_core_tap: "Planetarisches Superprojekt: Kernanschluss"
+decision_pd_aw_core_tap_desc: "Indem wir ein Netzwerk von Maschinen schaffen, die sich bis in den Kern dieser Welt vorarbeiten, können wir auf Kosten des Ökosystems des Planeten eine unglaubliche Menge an Energie erzeugen."
+decision_pd_megacoretap_requirements: "£trigger_no£ §REs kann keine anderen Bezirke geben als§! §Y$district_generator_plural$§!"
 
- #Technology
- tech_pd_planetary_core_tap: "Planetary Superproject: Core Tap"
- tech_pd_planetary_core_tap_desc: "By creating a network of machines that burrow into the very core of a world, we will be able to generate an incredible amount of energy at the expense of the planet's ecosystem."
- tech_pd_planetary_core_tap_tooltip: "§HUnlocks Decision:§! $decision_pd_aw_core_tap$"
+#Modifikator
+pd_aw_core_tap: "Core Tap"
+pd_aw_core_tap_desc: "Diese Welt verfügt über ein riesiges Netzwerk von Maschinen, die sich in ihren Kern graben, um Urenergie zu gewinnen, dabei aber das ursprüngliche Ökosystem zerstören."
+
+#Technologie
+tech_pd_planetary_core_tap: "Planetarisches Superprojekt: Core Tap"
+tech_pd_planetary_core_tap_desc: "Indem wir ein Netzwerk von Maschinen schaffen, die sich bis in den tiefsten Kern einer Welt graben, können wir auf Kosten des Ökosystems des Planeten eine unglaubliche Menge an Energie erzeugen."
+tech_pd_planetary_core_tap_tooltip: "§HUnlocks Decision:§! $decision_pd_aw_core_tap$"
 
 #Agriworld
- #Planet Class
- pc_pd_agriworld: "Agriworld"
- pc_pd_agriworld_desc: "This rocky planet brims with endless industrial farming heavily relying on potent fertilizers, complex weather control, and advanced irrigation systems. While it sustains an unceasing bounty, it has replaced the planet's natural ecosystem."
- pc_pd_agriworld_adj: "agarian"
- mod_pc_pd_agriworld_habitability: "Agriworld Habitability"
- trait_pc_pd_agriworld_preference: "Agriworld Prefernce"
- trait_pc_pd_agriworld_preference_desc: "$trait_pc_arctic_preference_desc$"
+#Planet Class
+pc_pd_agriworld: "Agriworld"
+pc_pd_agriworld_desc: "Dieser felsige Planet ist voll von endloser industrieller Landwirtschaft, die stark auf potente Düngemittel, komplexe Wetterkontrolle und fortschrittliche Bewässerungssysteme angewiesen ist. Obwohl sie eine unaufhörliche Fülle aufrechterhält, hat sie das natürliche Ökosystem des Planeten ersetzt."
+pc_pd_agriworld_adj: "agarian"
+mod_pc_pd_agriworld_habitability: "Agriworld-Bewohnbarkeit"
+trait_pc_pd_agriworld_preference: "Agriworld-Präferenz"
+trait_pc_pd_agriworld_preference_desc: "$trait_pc_arctic_preference_desc$"
 
- #Decision
- decision_pd_aw_agriworld: "Planetary Superproject: Agriworld"
- decision_pd_aw_agriworld_desc: "By transforming this planet into an Agriworld, we will create vast fields of industrial farming, replacing the natural ecosystem with a bountiful, artificial agricultural expanse."
- decision_pd_agriworld_requirements: "£trigger_no£ §RThere can be no other districts but§! §Y$district_farming_plural$§!"
+#Entscheidung
+decision_pd_aw_agriworld: "Planetarisches Superprojekt: Agriworld"
+decision_pd_aw_agriworld_desc: "Indem wir diesen Planeten in eine Agriworld verwandeln, werden wir riesige Felder für industrielle Landwirtschaft schaffen und das natürliche Ökosystem durch eine üppige, künstliche landwirtschaftliche Fläche ersetzen."
+decision_pd_agriworld_requirements: "£trigger_no£ §REs kann keine anderen Distrikte geben als§! §Y$district_farming_plural$§!"
 
- #Modifier
- pd_aw_agriworld: "Agriworld"
- pd_aw_agriworld_desc: "This world boasts industrial farming that heavily relies on potent fertilizers, complex weather control, and advanced irrigation systems."
+#Modifikator
+pd_aw_agriworld: "Agriworld"
+pd_aw_agriworld_desc: "Diese Welt ist stolz auf die industrielle Landwirtschaft, die stark auf potente Düngemittel, komplexe Wetterkontrolle und moderne Bewässerungssysteme angewiesen ist."
 
- #Technology
- tech_pd_planetary_agriworld: "Planetary Superproject: Agriworld"
- tech_pd_planetary_agriworld_desc: "By transforming a planet into an Agriworld, we will create vast fields of industrial farming, replacing the natural ecosystem with a bountiful, artificial agricultural expanse."
- tech_pd_planetary_agriworld_tooltip: "§HUnlocks Decision:§! $decision_pd_aw_agriworld$"
+#Technologie
+tech_pd_planetary_agriworld: "Planetarisches Superprojekt: Agriworld"
+tech_pd_planetary_agriworld_desc: "Indem wir einen Planeten in eine Agriworld verwandeln, werden wir riesige Felder für die industrielle Landwirtschaft schaffen und das natürliche Ökosystem durch üppige, künstliche landwirtschaftliche Flächen ersetzen."
+
+tech_pd_planetary_agriworld_tooltip: "§HUnlocks Decision:§! $decision_pd_aw_agriworld$"
 
 #Stripmine
- #Planet Class
- pc_pd_stripmine: "Stripmine"
- pc_pd_stripmine_desc: "This planet is now an expanse of deep strip-mining operations, its surface crisscrossed by a labyrinth of industrial excavators and drill rigs. The natural ecosystem has been ruined in the ceaseless quest for resources."
- pc_pd_stripmine_adj: "mining"
- mod_pc_pd_stripmine_habitability: "Stripmine Habitability"
- trait_pc_pd_stripmine_preference: "Stripmine Prefernce"
- trait_pc_pd_stripmine_preference_desc: "$trait_pc_arctic_preference_desc$"
+#Planet Class
+pc_pd_stripmine: "Stripmine"
+pc_pd_stripmine_desc: "Dieser Planet ist jetzt eine Fläche von Tagebaubetrieben, seine Oberfläche ist von einem Labyrinth aus Industriebaggern und Bohrgeräten durchzogen. Das natürliche Ökosystem wurde durch die unaufhörliche Suche nach Ressourcen zerstört."
+pc_pd_stripmine_adj: "Bergbau"
+mod_pc_pd_stripmine_habitability: "Bewohnbarkeit von Tagebau"
+trait_pc_pd_stripmine_preference: "Präferenz für Tagebau"
+trait_pc_pd_stripmine_preference_desc: "$trait_pc_arctic_preference_desc$"
 
- #Decision
- decision_pd_aw_stripmine: "Planetary Superproject: Stripmine"
- decision_pd_aw_stripmine_desc: "We could collect resources from every inch of this planet's surface by constructing advanced industrial excavators and drill rigs. The natural ecosystem will significantly suffer from the process."
- decision_pd_stripmine_requirements: "£trigger_no£ §RThere can be no other districts but§! §Y$district_mining_plural$§!"
+#Entscheidung
+decision_pd_aw_stripmine: "Planetarisches Superprojekt: Tagebau"
+decision_pd_aw_stripmine_desc: "Wir könnten Ressourcen von jedem Zentimeter der Oberfläche dieses Planeten sammeln, indem wir moderne industrielle Bagger und Bohrgeräte bauen. Das natürliche Ökosystem würde unter diesem Prozess erheblich leiden."
+decision_pd_stripmine_requirements: "£trigger_no£ §REs kann keine anderen Distrikte geben als§! §Y$district_mining_plural$§!"
 
- #Modifier
- pd_aw_stripmine: "Stripmine"
- pd_aw_stripmine_desc: "This planet is an expanse of deep strip-mining operations, its surface crisscrossed by a labyrinth of industrial excavators and drill rigs."
+#Modifikator
+pd_aw_stripmine: "Tagebau"
+pd_aw_stripmine_desc: "Dieser Planet ist ein weites Gebiet für Tagebauarbeiten, seine Oberfläche ist von einem Labyrinth aus Industriebaggern und Bohrgeräten durchzogen."
 
- #Technology
- tech_pd_planetary_stripmine: "Planetary Superproject: Stripmine"
- tech_pd_planetary_stripmine_desc: "We could collect resources from every inch of a planet's surface by constructing advanced industrial excavators and drill rigs. The natural ecosystem will significantly suffer from the process."
- tech_pd_planetary_stripmine_tooltip: "§HUnlocks Decision:§! $decision_pd_aw_stripmine$"
+#Technologie
+tech_pd_planetary_stripmine: "Planetarisches Superprojekt: Tagebau"
+tech_pd_planetary_stripmine_desc: "Wir könnten Ressourcen von jedem Zentimeter der Oberfläche eines Planeten sammeln, indem wir moderne Industriebagger und Bohrgeräte bauen. Das natürliche Ökosystem würde unter diesem Prozess erheblich leiden."
+tech_pd_planetary_stripmine_tooltip: "§HUnlocks Decision:§! $decision_pd_aw_stripmine$"
