--- a/planetary_diversity_ascension_worlds/localisation/german/planetarydiversity_aw_wasteland_l_german.yml
+++ b/planetary_diversity_ascension_worlds/localisation/german/planetarydiversity_aw_wasteland_l_german.yml
@@ -1,30 +1,31 @@
-﻿l_english:
+﻿l_german:
 
 ###Wasteland Planets
 #AP
- ap_pd_wasteland_worlds: "Unregulated Industrialism"
- ap_pd_wasteland_worlds_desc: "In pursuing unrestrained productivity, we must cast aside environmental constraints to unlock the planet's true industrial potential."
- allow_wasteland_worlds: "§YUnlocks Decision:§! $decision_pd_aw_wasteland_planet$ on non-ideal planets"
- describe_wasteland_worlds: "§Y$decision_pd_aw_wasteland_planet$§! modifier:\n$t$- Unlocks £district£ §YGenerator Districts§! and §YMining District§!\n$t$- Blocks all §YAgriculture Districts§!\n$t$- $MOD_HABITABILITY_CEIL$: §Y60%§!\n$t$- $mod_planet_jobs_alloys_produces_mult$: §G100%§!\n$t$- $mod_planet_jobs_consumer_goods_produces_mult$: §G100%§!\n$t$- $mod_planet_chemists_produces_mult$: §G50%§!\n$t$- $mod_planet_refiners_produces_mult$: §G50%§!\n$t$- $mod_planet_translucers_produces_mult$: §G50%§!"
+ap_pd_wasteland_worlds: "Unregulierter Industrialismus"
+ap_pd_wasteland_worlds_desc: "Um ungebremste Produktivität zu erreichen, müssen wir Umweltbeschränkungen beiseite schieben, um das wahre industrielle Potenzial des Planeten freizusetzen."
+allow_wasteland_worlds: "§YEntsperrt Entscheidung:§! $decision_pd_aw_wasteland_planet$ auf nicht idealen Planeten"
 
-#Decisions
- decision_pd_aw_wasteland_planet: "Unregulated Industrial Standards"
- decision_pd_aw_wasteland_planet_desc: "Environmental concerns do nothing but hold us back. By ignoring the state of the planet's natural ecosystem, we will unlock the planet's true industrial potential."
- decision_pd_aw_wasteland_planet_effects_short: "§Y$pd_aw_wasteland_planet$§! modifier added.\n\nIncreases §GIndustrial Output§! but reduces £mod_pop_environment_tolerance£ §RHabitability§!."
- decision_pd_aw_wasteland_planet_cleanup: "Environmental Clean Up"
- decision_pd_aw_wasteland_planet_cleanup_desc: "The severe environmental degradation on this planet has left its ecosystem in a precarious state. We will rectify the damage inflicted upon this world."
- decision_pd_aw_wasteland_planet_cleanup_tooltip: "We will restore this planet's original ecosystem."
+describe_wasteland_worlds: "§Y$decision_pd_aw_wasteland_planet$§! Modifikator:\n$t$- Schaltet £district£ §YGenerator Districts§! und §YMining District§! frei.\n$t$- Blockiert alle §YAgriculture Districts§!\n$t$- $MOD_HABITABILITY_CEIL$: §Y60%§!\n$t$- $mod_planet_jobs_alloys_produces_mult$: §G100%§!\n$t$- $mod_planet_jobs_consumer_goods_produces_mult$: §G100%§!\n$t$- $mod_planet_chemists_produces_mult$: §G50%§!\n$t$- $mod_planet_refiners_produces_mult$: §G50%§!\n$t$- $mod_planet_translucers_produces_mult$: §G50%§!"
 
-#Modifiers
- pd_aw_wasteland_planet: "Industrial Wasteland"
- pd_aw_wasteland_planet_desc: "$decision_pd_aw_wasteland_planet_desc$"
- pd_aw_wasteland_planet_tooltip: "Unlocks £district£ §YGenerator Districts§! and §YMining District§!\nBlocks all §YAgriculture Districts§!"
- pd_wasteland_planet: "Industrial Wasteland"
- pd_wasteland_planet_desc: "$pd_aw_wasteland_planet_desc$"
- pd_wasteland_planet_tooltip: "Unlocks £district£ §YGenerator Districts§! and §YMining District§!\nBlocks all §YAgriculture Districts§!"
+#Entscheidungen
+decision_pd_aw_wasteland_planet: "Unregulierte Industriestandards"
+decision_pd_aw_wasteland_planet_desc: "Umweltbedenken halten uns nur zurück. Indem wir den Zustand des natürlichen Ökosystems des Planeten ignorieren, werden wir das wahre industrielle Potenzial des Planeten freisetzen."
+decision_pd_aw_wasteland_planet_effects_short: "§Y$pd_aw_wasteland_planet$§! Modifikator hinzugefügt.\n\nErhöht §GIndustrielle Produktion§!, verringert aber £mod_pop_environment_tolerance£ §RHabitability§!."
+decision_pd_aw_wasteland_planet_cleanup: "Umweltsanierung"
+decision_pd_aw_wasteland_planet_cleanup_desc: "Die schwere Umweltzerstörung auf diesem Planeten hat sein Ökosystem in einen prekären Zustand gebracht. Wir werden den Schaden beheben, der dieser Welt zugefügt wurde."
+decision_pd_aw_wasteland_planet_cleanup_tooltip: "Wir werden das ursprüngliche Ökosystem dieses Planeten wiederherstellen."
 
-#Notification Message
- MESSAGE_PD_AW_WASTELAND_DESC:1 "$PLANET|Y$ now has §Y$decision_pd_aw_wasteland_planet$§!"
- MESSAGE_PD_AW_WASTELAND_MESSAGE_TYPE_TITLE: "Environmental Regulations Abolished"
- MESSAGE_PD_AW_WASTELAND_CLEANUP_DESC:1 "The ecosystem on $PLANET|Y$ has been repaired."
- MESSAGE_PD_AW_WASTELAND_CLEANUP_MESSAGE_TYPE_TITLE: "Environmental Regulations Returned"
+#Modifikatoren
+pd_aw_wasteland_planet: "Industriebrache"
+pd_aw_wasteland_planet_desc: "$decision_pd_aw_wasteland_planet_desc$"
+pd_aw_wasteland_planet_tooltip: "Schaltet £district£ §YGeneratorbezirke§! und §YBergbaubezirk§ frei!\nBlockiert alle §YAgrabbaubezirke§!"
+pd_wasteland_planet: "Industriebrache"
+pd_wasteland_planet_desc: "$pd_aw_wasteland_planet_desc$"
+pd_wasteland_planet_tooltip: "Schaltet £district£ §YGeneratorbezirke§! und §YBergbaubezirk§ frei!\nBlockiert alle §YAgrabbaubezirke§!"
+
+#Benachrichtigungsnachricht
+MESSAGE_PD_AW_WASTELAND_DESC:1 "$PLANET|Y$ hat jetzt §Y$decision_pd_aw_wasteland_planet$§!"
+MESSAGE_PD_AW_WASTELAND_MESSAGE_TYPE_TITLE: "Umweltschutzbestimmungen abgeschafft"
+MESSAGE_PD_AW_WASTELAND_CLEANUP_DESC:1 "Das Ökosystem auf $PLANET|Y$ wurde repariert."
+MESSAGE_PD_AW_WASTELAND_CLEANUP_MESSAGE_TYPE_TITLE: "Umweltschutzbestimmungen wiederhergestellt"
